--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,9 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/base"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#fffc970b"
+    android:background="@color/colorPrimary"
     tools:context="com.angus.stormy.MainActivity">
 
     <TextView
@@ -60,14 +61,14 @@
         app:srcCompat="@drawable/cloudy_night" />
 
     <LinearLayout
+        android:id="@+id/linearLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/temperatureLabel"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:orientation="horizontal"
-        android:weightSum="100"
-        android:id="@+id/linearLayout">
+        android:weightSum="100">
 
         <LinearLayout
             android:layout_width="wrap_content"
