--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -49,6 +49,17 @@
         android:textColor="@android:color/white"
         android:textSize="24sp" />
 
+    <TextView
+        android:id="@+id/countryLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/iconImageView"
+        android:layout_centerHorizontal="true"
+        android:layout_centerInParent="false"
+        android:layout_centerVertical="false"
+        android:text="Getting Country"
+        android:textColor="@android:color/white" />
+
     <ImageView
         android:id="@+id/iconImageView"
         android:layout_width="wrap_content"
@@ -138,14 +149,18 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/locationLabel"
         android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
         android:layout_marginBottom="12dp"
+        android:layout_weight="1"
         app:srcCompat="@drawable/refresh" />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyle"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/refreshImageView"
-        android:layout_centerHorizontal="true" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10.5dp"
+        android:layout_weight="1" />
+
 </RelativeLayout>
